namespaces/live-1.cloud-platform.service.justice.gov.uk/hmpps-tier-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-tier-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preproduction"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "hmpps-tier"
    cloud-platform.justice.gov.uk/owner: "Manage a Sentence Team"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-tier.git"
    cloud-platform.justice.gov.uk/slack-channel: "manage_a_sentence"
